# weep

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  WeepEngine.cmake.desktop
.github/workflows/: cmake.yml  remove-old-artifacts.yml
data/: debugprefabs.json  debugscene.json  environment.json  fallingsand.json  fonts.json  minimal.json  pbrtestscene.json  settings.json  settings_gles.json  shaders.json  shot_settings.json  testscene.json
data/logo/: readme.txt
data/shaders/: blur.frag  core.frag  core.geom  core.tesc  core.tese  core.vert  core_particles.comp  core_particles.vert  depth.frag  depth.geom  depth.vert  extensions.glsl  missing.frag  missing.vert  normal.frag  normal.vert  particletest.comp  particletest.vert  pntri.tesc  pntri.tese  postfx.frag  postfx.vert  skybox.frag  skybox.geom  skybox.vert  terrain.frag  terrain.tesc  terrain.tese  terrain.vert  uniforms.glsl
docs/: Code-Modules.md  Design.md  IQM-from-Blender.md  Scene-Format.md
engine/: animation.cpp  animation.hpp  args.hpp  audio.cpp  audio.hpp  camera.hpp  common.cpp  common.hpp  components.hpp  engine.cpp  engine.hpp  environment.cpp  environment.hpp  geometry.cpp  geometry.hpp  glutil.hpp  gui.cpp  gui.hpp  image.cpp  image.hpp  light.hpp  material.hpp  model.hpp  module.cpp  module.hpp  physics.cpp  physics.hpp  platform.cpp  renderer.cpp  renderer.hpp  resources.cpp  resources.hpp  scene.cpp  scene.hpp  shader.hpp  threadpool.hpp  triggers.cpp  triggers.hpp  tween.hpp  utils.cpp  (+1 more)
engine/glrenderer/: buffers.cpp  buffers.hpp  fbo.cpp  fbo.hpp  gles_stub.c  glutil.cpp  glutil.hpp  renderdevice.cpp  renderdevice.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  uniforms.cpp  uniforms.hpp
game/: controller.cpp  controller.hpp  game.hpp  imgui-utils.cpp  imgui-utils.hpp  main.cpp  skyrunner.cpp
game/modules/: asteroids.cpp  compute.cpp  console.cpp  devtools.cpp  fallingsand.cpp  logo.cpp  pong.cpp  settings.cpp  skyrunner.cpp  skyrunner_levelgen.cpp  skyrunner_rules.cpp  testbed.cpp
src/: camera.hpp  common.cpp  common.hpp  geometry.cpp  geometry.hpp  glutil.cpp  main.cpp  material.hpp  model.hpp  platform.cpp  platform.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp
tools/: cppcheck.sh  generate-test-scene.sh  update-deps.sh
tools/blender/io_scene_json/: __init__.py
tools/remotery-vis/: Readme.txt
tools/update-deps/: 00-update-misc.sh  10-update-glm.sh  20-update-imgui.sh  30-update-bullet.sh  40-update-soloud.sh  50-update-remotery.sh  config.sh
tools/update-deps/patches/: 20-ImGUIImpl.patch  30-btRigidBodyConstructor.patch
tools/voxelpainter/: OBJExporter.js  voxelpainter.html  voxelpainter.js
